# goes-ortho

./: .buildinfo  .pre-commit-config.yaml  GOES17_ABI_ALLBANDS_MAR2016.eqw  LICENSE  ProjectIdea.md  README.md  README.rst  aircraft-mat-to-geotiff.ipynb  asp_binder_utils.py  clip.html  download-goes-pair.ipynb  download-goes-timeseries.py  download-goes.py  environment.yml  genindex.html  geometry.html  get_data.html  goes-aws-plot-tutorial.ipynb  goes-aws.ipynb  goes-geometry.ipynb  goes-make-ortho-map.ipynb  goes-orthorectify-aster.ipynb  goes-orthorectify-aster.py  goes-orthorectify-batch.ipynb  goes-orthorectify.ipynb  goes-timeseries.py  goes-view.ipynb  goes_clip.py  goes_geometry.py  goes_ortho.py  goes_rad.py  goes_rad_utils.py  goes_timeseries.py  index.html  installation.html  map2rpc.ipynb  netcdf-to-geotiff.ipynb  netcdf2geotiff.py  objects.inv  old-README.md  (+12 more)
.github/workflows/: build-docs.yml  docs.yml  installation.yml  macos.yml  pypi.yml  python-app.yml  python-package-conda.yml  tests.yml  ubuntu.yml  windows.yml
_modules/: clip.html  geometry.html  index.html  orthorectify.html  rad.html  timeseries.html
_sources/: index.rst.txt
_sources/examples/: jsontest.ipynb.txt  subset_abi_netcdf_example.ipynb.txt
_static/: documentation_options.js
data/: GOES16_ABI_ALLBANDS_MAR2016.eqw  GOES18_ABI_ALLBANDS_MAR2016.eqw  ahi_Sep2013.eqw
docs/: README.md  clip.rst  conf.py  geometry.rst  get_data.rst  index.html  index.md  index.rst  installation.rst  orthorectify.rst  quick_start.rst  rad.rst  timeseries.rst
docs/_templates/autosummary/: class.rst
docs/examples/: GaylorPit_039_T15min.csv  download.ipynb  example.json  example_workflow.ipynb  goes-orthorectify.ipynb  make_abi_timeseries_example.ipynb  orthorectify_abi_example.ipynb  quick_start.ipynb
docs/goes_ortho/: clip.html  geometry.html  get_data.html  index.html  orthorectify.html  rad.html  timeseries.html
docs/source/: clip.rst  conf.py  get_data.rst  how_to_install.rst  index.rst  orthorectify.rst  rad.rst
examples/: GaylorPit_039_T15min.csv  download.html  example.json  example_workflow.html  goes-orthorectify.html  goes-orthorectify.ipynb  jsontest.html  jsontest.ipynb  make_abi_timeseries_example.html  ortho-horizontal-offset.html  ortho-horizontal-offset.ipynb  orthorectify_abi_example.html  orthorectify_abi_example.ipynb  orthorectify_abi_example2.ipynb  quick_start.html  subset_abi_netcdf_example.html  subset_abi_netcdf_example.ipynb
goes-ortho/: __init__.py  goes_clip.py
goes_ortho/: __init__.py  asp_binder_utils.py  clip.py  download_goes.py  geometry.py  get_data.py  goes_clip.py  goes_geometry.py  goes_ortho.py  goes_rad.py  goes_timeseries.py  orthorectify.py  rad.py  timeseries.py
old/: ProjectIdea.md  aircraft-mat-to-geotiff.ipynb  download-goes-pair.ipynb  download-goes-test.py  goes-aws-plot-tutorial.ipynb  goes-dem.ipynb  goes-geometry.ipynb  goes-make-ortho-map.ipynb  goes-orthorectify-batch.ipynb  goes-view.ipynb  linux-env-test.yml  linux-env.yml  srtm.ipynb
scripts/: download-goes.py
shapefiles/: CUES_lon_75_west.dbf  CUES_lon_75_west.shp  CUES_lon_75_west.shx  CUES_lon_89_west.dbf  CUES_lon_89_west.shp  CUES_lon_89_west.shx  GaylorPit_lon_75_west.dbf  GaylorPit_lon_75_west.shp  GaylorPit_lon_75_west.shx  GaylorPit_lon_89_west.dbf  GaylorPit_lon_89_west.shp  GaylorPit_lon_89_west.shx  lon_75_west.dbf  lon_75_west.shx
src/goes_ortho/: Downloader.py  __init__.py  checkData.py  clip.py  geometry.py  get_data.py  io.py  orthorectify.py  rad.py  timeseries.py  utils.py
tests/: conftest.py  get_data.py  test_clip.py  test_geometry.py  test_rad.py
