[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "goes_ortho"
dynamic = ["version"]
readme = {file = "README.rst", content-type = "text/x-rst"}
description = "A python package for downloading GOES-R ABI imagery, orthorectifying with a DEM, and creating timeseries"
dependencies = [
    "boto3",
    "ipykernel",
    "numpy",
    "pandas",
    "matplotlib",
    "xarray",
    "rioxarray",
    "gdal<=3.8",
    "pyproj",
    "pathlib",
    "requests",
    "rasterio",
    "netCDF4",
    "h5netcdf",
    "zarr",
    "dask",
    "awscli",
    "s3fs",
    "pydap",
    "cftime",
    "cfgrib",
    "pooch",
    "fsspec",
    "gdown",
    "aiohttp",
    "scipy",
    "geopandas",
    "folium",
    "distributed",
    "tqdm",
    "hvplot",
    "black",
    "flake8",
    "scikit-learn",
    "geogif",
]
requires-python = ">=3.8"
authors = [
    {name = "Steven Pestana", email = "spestana@uw.edu"},
]
license = {file = "LICENSE"}


[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pre-commit>=2.17.0",
    "nox",
]
doc = [
    "pandoc",
    "sphinx",
    "furo",
    "myst-parser",
    "nbsphinx",
    "ipykernel",
    "ghp-import",
]

[project.urls]
Homepage = "https://spestana.github.io/goes_ortho"
Repository = "https://github.com/spestana/goes_ortho"
Issues = "https://github.com/spestana/goes_ortho/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/goes_ortho"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/tests",
  "/data",
  "/examples",
  "/images",
  "/scripts",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/goes_ortho/version.py"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]
